metadata/force-app/main/default/objects/CustomName_HefeZ__c/CustomName_HefeZ__c.object-meta.xml
<CustomObject>
    <description>Description_LpjAg</description>
    <label>CustomLabel_DkrRZ</label>
    <nameField>
        <label>CustomLabel_DkrRZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_DkrRZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>