metadata/force-app/main/default/objects/CustomName_HefeZ__c/fields/CustomField_aQNNZ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aQNNZ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldouaEj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>