metadata/force-app/main/default/objects/CustomName_HefeZ__c/fields/CustomField_iLIye__c.field-meta.xml
<CustomField>
    <fullName>CustomField_iLIye__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldyDALl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>